frontend React + fixes backend de categorías
Frontend (React 19 + Vite 8 + Tailwind v4):
- Auth JWT: login, contexto de autenticación, rutas protegidas
- Layout con sidebar oscuro y drawer móvil
- Dashboard con estadísticas, charts (recharts) y alertas de stock
- Inventario con grid/tabla, filtros (búsqueda, categoría, stock),
  paginación responsive y modal de producto con movimientos
- Estructura modular: componentes por página (dashboard/, inventario/)

Backend:
- Fix query CTE recursiva de categorías: List en lugar de Page
  (corrige error SQL de paginación sobre WITH RECURSIVE)
- Endpoint /api/productos/categoria/{id} sin Pageable

Otros:
- Postman collection actualizada
- AGENTS.md y .gitignore actualizados